--- a/cccc.html
+++ b/cccc.html
@@ -17,6 +17,8 @@
       --panel: #1f3946;
       --panel-hover: #2b4a5e;
       --text: #f7fbff;
+      --nav-bg: rgba(0,51,102,0.9);
+      --footer-bg: rgba(0,51,102,0.9);
     }
     body {
       margin:0;
@@ -30,6 +32,8 @@
       --panel: #2a2a2a;
       --panel-hover: #3a3a3a;
       --text: #ffffff;
+      --nav-bg: #2a2a2a;
+      --footer-bg: #2a2a2a;
       background: linear-gradient(130deg, #0d0d0d, #1a1a1a);
     }
     .wrap { max-width:880px; margin:28px auto; padding:22px; }
@@ -61,21 +65,40 @@
     .chev { transition: transform .28s ease; }
     .chev.open { transform:rotate(90deg); }
     .sublist { padding:10px 20px; }
-    footer { background: rgba(0,51,102,0.9); color:#fff; margin-top:40px; padding:20px 0; }
+    nav.navbar { background: var(--nav-bg) !important; transition: background .35s ease; }
+    footer { background: var(--footer-bg); color:#fff; margin-top:40px; padding:20px 0; transition: background .35s ease; }
 
-    /* Toast style */
-    .toast-container {
+    /* Login overlay */
+    #loginOverlay {
       position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 9999;
+      top:0; left:0; right:0; bottom:0;
+      background: rgba(0,0,0,0.85);
+      display:flex; align-items:center; justify-content:center;
+      z-index: 2000;
     }
+    #loginBox {
+      background:#fff; color:#000; padding:20px; border-radius:12px; width:300px;
+      text-align:center;
+    }
+    #loginBox input { width:100%; padding:10px; margin:8px 0; border-radius:8px; border:1px solid #ccc; }
+    #loginBox button { width:100%; padding:10px; background:#003366; color:#fff; border:none; border-radius:8px; }
   </style>
 </head>
 <body>
 
+<!-- Login Overlay -->
+<div id="loginOverlay">
+  <div id="loginBox">
+    <h4>Login</h4>
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="checkLogin()">Login</button>
+    <p id="loginError" style="color:red; display:none; margin-top:8px;">Wrong credentials!</p>
+  </div>
+</div>
+
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg" style="background: rgba(0,51,102,0.9);">
+<nav class="navbar navbar-expand-lg">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center me-3 text-white fw-bold" href="index.html">
       <img src="images/smart door system.png" alt="Logo" style="height:40px; margin-right:8px;">
@@ -220,7 +243,6 @@
   </div>
 </div>
 
-<!-- Footer -->
 <footer class="site-footer">
   <div class="container">
     <div class="row">
@@ -296,6 +318,23 @@
 </script>
 
 <script>
+  // Login system (hidden credentials)
+  const _user = "cet";
+  const _pass = "1037";
+
+  function checkLogin(){
+    let u = document.getElementById("username").value;
+    let p = document.getElementById("password").value;
+    if(u === _user && p === _pass){
+      document.getElementById("loginOverlay").style.display = "none";
+    } else {
+      document.getElementById("loginError").style.display = "block";
+    }
+  }
+</script>
+
+  
+<script>
   // Theme toggle
   const themeBtn = document.getElementById('themeToggle');
   themeBtn.addEventListener('click', ()=>{
@@ -322,3 +361,4 @@
 </script>
 </body>
 </html>
+
