--- a/cccc.html
+++ b/cccc.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Smart Door System - Control Page</title>
+  <title>Smart Door System - College of Electronic Technology Tripoli Control Page</title>
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -123,7 +123,7 @@
 <!-- Main Content -->
 <div class="wrap">
   <div class="main-card">
-    <h2 class="brand-title">College of Electronic Technology Tripoli</h2>
+    <h2 class="brand-title">College of Electronic Technology Tripoli - Control Page</h2>
     <img src="images/companies.pics/College of Electronic Technology - Tripoli.jpg" alt="College Logo" class="brand-img">
 
     <!-- Smart Door System Options -->
@@ -361,4 +361,5 @@
 </script>
 </body>
 </html>
+
 
