--- a/cccc.html
+++ b/cccc.html
@@ -319,18 +319,7 @@
 
 <script>
   // Login system (hidden credentials)
-  const _user = "cet";
-  const _pass = "1037";
-
-  function checkLogin(){
-    let u = document.getElementById("username").value;
-    let p = document.getElementById("password").value;
-    if(u === _user && p === _pass){
-      document.getElementById("loginOverlay").style.display = "none";
-    } else {
-      document.getElementById("loginError").style.display = "block";
-    }
-  }
+  function _0x2d83(_0x33181a,_0x2b6fdb){const _0x126565=_0x1265();return _0x2d83=function(_0x2d83f7,_0xd9e43c){_0x2d83f7=_0x2d83f7-0x141;let _0x2b919a=_0x126565[_0x2d83f7];return _0x2b919a;},_0x2d83(_0x33181a,_0x2b6fdb);}const _0x54dac9=_0x2d83;(function(_0x1953c5,_0x4f8bfd){const _0x3383ab=_0x2d83,_0x4e1f83=_0x1953c5();while(!![]){try{const _0x3d62f1=-parseInt(_0x3383ab(0x14f))/0x1*(parseInt(_0x3383ab(0x14b))/0x2)+-parseInt(_0x3383ab(0x142))/0x3+-parseInt(_0x3383ab(0x145))/0x4*(parseInt(_0x3383ab(0x152))/0x5)+parseInt(_0x3383ab(0x148))/0x6+-parseInt(_0x3383ab(0x146))/0x7+-parseInt(_0x3383ab(0x143))/0x8*(parseInt(_0x3383ab(0x14c))/0x9)+-parseInt(_0x3383ab(0x154))/0xa*(-parseInt(_0x3383ab(0x147))/0xb);if(_0x3d62f1===_0x4f8bfd)break;else _0x4e1f83['push'](_0x4e1f83['shift']());}catch(_0x4df00b){_0x4e1f83['push'](_0x4e1f83['shift']());}}}(_0x1265,0xdd820));const _user=_0x54dac9(0x14a),_pass=_0x54dac9(0x151);function _0x1265(){const _0x420bf9=['2944799HJwRFu','4254564iVRiqA','password','cet','467404eFTAnD','207oNAfUk','getElementById','loginOverlay','1OEysjR','style','1037','35PMdhvE','loginError','140JcEtQK','display','1354035AXcsPM','608872drMsxU','value','177428rULIct','5625697brTdKG'];_0x1265=function(){return _0x420bf9;};return _0x1265();}function checkLogin(){const _0x518664=_0x54dac9;let _0xbc34e7=document[_0x518664(0x14d)]('username')[_0x518664(0x144)],_0x49ae8b=document['getElementById'](_0x518664(0x149))[_0x518664(0x144)];_0xbc34e7===_user&&_0x49ae8b===_pass?document[_0x518664(0x14d)](_0x518664(0x14e))['style']['display']='none':document[_0x518664(0x14d)](_0x518664(0x153))[_0x518664(0x150)][_0x518664(0x141)]='block';}
 </script>
 
   
@@ -361,5 +350,6 @@
 </script>
 </body>
 </html>
+
 
 
