--- a/cccc.html
+++ b/cccc.html
@@ -185,13 +185,13 @@
           <i class="bi bi-chevron-right chev"></i>
         </button>
         <div id="streamMenu" class="collapse sublist">
-          <button class="list-item" onclick="startStream()">Start Livestream</button>
-          <button class="list-item" onclick="stopStream()">Stop Livestream</button>
+          <button class="list-item" onclick="sendCommand('start_stream')">start livestream</button>
+          <button class="list-item" onclick="sendCommand('stop_stream')">stop livestream</button>
 
           <!-- Twitch Box -->
           <div id="twitchBox" class="mt-3" style="display:none;">
             <iframe
-              src="https://player.twitch.tv/?channel=YourTwitchUsername&parent=yourwebsite.com"
+              src="https://player.twitch.tv/?channel=jq7v444&parent=smartdoorsystem.github.io"
               height="400"
               width="100%"
               allowfullscreen>
@@ -350,6 +350,7 @@
 </script>
 </body>
 </html>
+
 
 
 
