--- a/cccc.html
+++ b/cccc.html
@@ -179,24 +179,24 @@
           <button class="list-item" onclick="sendCommand('sys_buzztok')">Tokyo Drift</button>
         </div>
 
-        <!-- Livestream -->
-        <button class="btn-toggle" data-bs-toggle="collapse" data-bs-target="#streamMenu">
-          <span><i class="bi bi-tv-fill"></i> Livestream</span>
-          <i class="bi bi-chevron-right chev"></i>
-        </button>
-        <div id="streamMenu" class="collapse sublist">
-          <button class="list-item" onclick="sendCommand('start_stream')">start livestream</button>
-          <button class="list-item" onclick="sendCommand('stop_stream')">stop livestream</button>
+       <!-- Livestream -->
+<button class="btn-toggle" data-bs-toggle="collapse" data-bs-target="#streamMenu">
+  <span><i class="bi bi-tv-fill"></i> Livestream</span>
+  <i class="bi bi-chevron-right chev"></i>
+</button>
+<div id="streamMenu" class="collapse sublist">
+  <button class="list-item" onclick="startStream()">Start Livestream</button>
+  <button class="list-item" onclick="stopStream()">Stop Livestream</button>
 
-          <!-- Twitch Box -->
-          <div id="twitchBox" class="mt-3" style="display:none; margin-top:20px;">
-            <h3 class="p-3">📺 Livestream</h3>
-      <div class="ratio ratio-16x9">
-        <iframe id="twitchStream"
-           src="https://player.twitch.tv/?channel=jq7v444&parent=smartdoorsystem.github.io"
-          frameborder="0" allowfullscreen="true" scrolling="no">
-        </iframe>
-      </div>
+  <!-- Twitch Box -->
+  <div id="twitchBox" class="mt-3" style="display:none; margin-top:20px;">
+    <h3 class="p-3">📺 Livestream</h3>
+    <div class="ratio ratio-16x9">
+      <iframe id="twitchStream"
+        src="https://player.twitch.tv/?channel=jq7v444&parent=smartdoorsystem.github.io"
+        frameborder="0" allowfullscreen="true" scrolling="no">
+      </iframe>
+    </div>
         </div>
       </div>
     </div>
@@ -306,15 +306,16 @@
   }
   window.sendCommand = sendCommand;
 
-  // Livestream controls
-  window.startStream = function() {
-    sendCommand("start_stream");
-    document.getElementById("twitchBox").style.display = "block";
-  }
-  window.stopStream = function() {
-    sendCommand("stop_stream");
-    document.getElementById("twitchBox").style.display = "none";
-  }
+// Livestream controls
+window.startStream = function() {
+  sendCommand("start_stream");
+  document.getElementById("twitchBox").style.display = "block";
+}
+window.stopStream = function() {
+  sendCommand("stop_stream");
+  document.getElementById("twitchBox").style.display = "none";
+}
+
 </script>
 
 <script>
@@ -350,6 +351,7 @@
 </script>
 </body>
 </html>
+
 
 
 
