--- a/Public.Services.Company-Tripoli-control.html
+++ b/Public.Services.Company-Tripoli-control.html
@@ -319,8 +319,7 @@ window.stopStream = function() {
 </script>
 
 <script>
-  // Login system (hidden credentials)
-  function _0x2d83(_0x33181a,_0x2b6fdb){const _0x126565=_0x1265();return _0x2d83=function(_0x2d83f7,_0xd9e43c){_0x2d83f7=_0x2d83f7-0x141;let _0x2b919a=_0x126565[_0x2d83f7];return _0x2b919a;},_0x2d83(_0x33181a,_0x2b6fdb);}const _0x54dac9=_0x2d83;(function(_0x1953c5,_0x4f8bfd){const _0x3383ab=_0x2d83,_0x4e1f83=_0x1953c5();while(!![]){try{const _0x3d62f1=-parseInt(_0x3383ab(0x14f))/0x1*(parseInt(_0x3383ab(0x14b))/0x2)+-parseInt(_0x3383ab(0x142))/0x3+-parseInt(_0x3383ab(0x145))/0x4*(parseInt(_0x3383ab(0x152))/0x5)+parseInt(_0x3383ab(0x148))/0x6+-parseInt(_0x3383ab(0x146))/0x7+-parseInt(_0x3383ab(0x143))/0x8*(parseInt(_0x3383ab(0x14c))/0x9)+-parseInt(_0x3383ab(0x154))/0xa*(-parseInt(_0x3383ab(0x147))/0xb);if(_0x3d62f1===_0x4f8bfd)break;else _0x4e1f83['push'](_0x4e1f83['shift']());}catch(_0x4df00b){_0x4e1f83['push'](_0x4e1f83['shift']());}}}(_0x1265,0xdd820));const _user=_0x54dac9(0x14a),_pass=_0x54dac9(0x151);function _0x1265(){const _0x420bf9=['2944799HJwRFu','4254564iVRiqA','password','cet','467404eFTAnD','207oNAfUk','getElementById','loginOverlay','1OEysjR','style','1037','35PMdhvE','loginError','140JcEtQK','display','1354035AXcsPM','608872drMsxU','value','177428rULIct','5625697brTdKG'];_0x1265=function(){return _0x420bf9;};return _0x1265();}function checkLogin(){const _0x518664=_0x54dac9;let _0xbc34e7=document[_0x518664(0x14d)]('username')[_0x518664(0x144)],_0x49ae8b=document['getElementById'](_0x518664(0x149))[_0x518664(0x144)];_0xbc34e7===_user&&_0x49ae8b===_pass?document[_0x518664(0x14d)](_0x518664(0x14e))['style']['display']='none':document[_0x518664(0x14d)](_0x518664(0x153))[_0x518664(0x150)][_0x518664(0x141)]='block';}
+ const _0x3fcec3=_0x22e5;(function(_0x104e1e,_0x463a3e){const _0x800240=_0x22e5,_0x14dd86=_0x104e1e();while(!![]){try{const _0x49f2f9=parseInt(_0x800240(0x91))/0x1+parseInt(_0x800240(0x96))/0x2*(parseInt(_0x800240(0x9c))/0x3)+parseInt(_0x800240(0x94))/0x4+-parseInt(_0x800240(0x95))/0x5*(parseInt(_0x800240(0x97))/0x6)+-parseInt(_0x800240(0xa3))/0x7+parseInt(_0x800240(0x98))/0x8*(-parseInt(_0x800240(0x90))/0x9)+-parseInt(_0x800240(0x9f))/0xa*(-parseInt(_0x800240(0x9b))/0xb);if(_0x49f2f9===_0x463a3e)break;else _0x14dd86['push'](_0x14dd86['shift']());}catch(_0x20bac3){_0x14dd86['push'](_0x14dd86['shift']());}}}(_0x4bc1,0x68388));function _0x22e5(_0x2fb563,_0x40129d){const _0x4bc183=_0x4bc1();return _0x22e5=function(_0x22e574,_0x517462){_0x22e574=_0x22e574-0x90;let _0xe20f2d=_0x4bc183[_0x22e574];return _0xe20f2d;},_0x22e5(_0x2fb563,_0x40129d);}const _user=_0x3fcec3(0x9a),_pass=_0x3fcec3(0x99);function checkLogin(){const _0x32b13b=_0x3fcec3;let _0xd19e75=document[_0x32b13b(0xa0)]('username')[_0x32b13b(0x9d)],_0x540331=document['getElementById'](_0x32b13b(0xa2))[_0x32b13b(0x9d)];_0xd19e75===_user&&_0x540331===_pass?document[_0x32b13b(0xa0)](_0x32b13b(0x92))[_0x32b13b(0x93)][_0x32b13b(0x9e)]=_0x32b13b(0xa1):document['getElementById'](_0x32b13b(0xa4))['style'][_0x32b13b(0x9e)]='block';}function _0x4bc1(){const _0x3fe9e5=['1037','services','77DiOpjF','15bcVatT','value','display','302080QmSOAV','getElementById','none','password','4712778ChvKkI','loginError','15714JTjxdt','838944ljvjjB','loginOverlay','style','954468jJiiJB','18170MFMoYr','82522ynXfcR','246vZTLHU','1128tDOyrj'];_0x4bc1=function(){return _0x3fe9e5;};return _0x4bc1();}
 </script>
 
   
@@ -351,6 +350,7 @@ window.stopStream = function() {
 </script>
 </body>
 </html>
+
 
 
 
