--- a/College.of.Electronic.Technology-Tripoli-control.html
+++ b/College.of.Electronic.Technology-Tripoli-control.html
@@ -319,8 +319,10 @@ window.stopStream = function() {
 </script>
 
 <script>
-  // Login system (hidden credentials)
-  function _0x2d83(_0x33181a,_0x2b6fdb){const _0x126565=_0x1265();return _0x2d83=function(_0x2d83f7,_0xd9e43c){_0x2d83f7=_0x2d83f7-0x141;let _0x2b919a=_0x126565[_0x2d83f7];return _0x2b919a;},_0x2d83(_0x33181a,_0x2b6fdb);}const _0x54dac9=_0x2d83;(function(_0x1953c5,_0x4f8bfd){const _0x3383ab=_0x2d83,_0x4e1f83=_0x1953c5();while(!![]){try{const _0x3d62f1=-parseInt(_0x3383ab(0x14f))/0x1*(parseInt(_0x3383ab(0x14b))/0x2)+-parseInt(_0x3383ab(0x142))/0x3+-parseInt(_0x3383ab(0x145))/0x4*(parseInt(_0x3383ab(0x152))/0x5)+parseInt(_0x3383ab(0x148))/0x6+-parseInt(_0x3383ab(0x146))/0x7+-parseInt(_0x3383ab(0x143))/0x8*(parseInt(_0x3383ab(0x14c))/0x9)+-parseInt(_0x3383ab(0x154))/0xa*(-parseInt(_0x3383ab(0x147))/0xb);if(_0x3d62f1===_0x4f8bfd)break;else _0x4e1f83['push'](_0x4e1f83['shift']());}catch(_0x4df00b){_0x4e1f83['push'](_0x4e1f83['shift']());}}}(_0x1265,0xdd820));const _user=_0x54dac9(0x14a),_pass=_0x54dac9(0x151);function _0x1265(){const _0x420bf9=['2944799HJwRFu','4254564iVRiqA','password','cet','467404eFTAnD','207oNAfUk','getElementById','loginOverlay','1OEysjR','style','1037','35PMdhvE','loginError','140JcEtQK','display','1354035AXcsPM','608872drMsxU','value','177428rULIct','5625697brTdKG'];_0x1265=function(){return _0x420bf9;};return _0x1265();}function checkLogin(){const _0x518664=_0x54dac9;let _0xbc34e7=document[_0x518664(0x14d)]('username')[_0x518664(0x144)],_0x49ae8b=document['getElementById'](_0x518664(0x149))[_0x518664(0x144)];_0xbc34e7===_user&&_0x49ae8b===_pass?document[_0x518664(0x14d)](_0x518664(0x14e))['style']['display']='none':document[_0x518664(0x14d)](_0x518664(0x153))[_0x518664(0x150)][_0x518664(0x141)]='block';}
+
+  
+ const _0x41b11f=_0xc0b2;function _0x149b(){const _0x5444df=['8772894BxLyVS','4161416YGDLjl','6cExCvn','1179728zuAcCq','1fkrCyc','loginOverlay','loginError','56OceIkG','getElementById','block','3314565mlcHCP','username','value','230SJoOdD','password','1037','cet','style','display','4121421KzLVIG','2584768zaNGEO','1080736eCCENx'];_0x149b=function(){return _0x5444df;};return _0x149b();}(function(_0x1d284e,_0x1e20f8){const _0x3db84f=_0xc0b2,_0x15f8e8=_0x1d284e();while(!![]){try{const _0x32a126=-parseInt(_0x3db84f(0x1f9))/0x1*(parseInt(_0x3db84f(0x1f3))/0x2)+parseInt(_0x3db84f(0x1f2))/0x3+-parseInt(_0x3db84f(0x1f6))/0x4+-parseInt(_0x3db84f(0x1e9))/0x5*(parseInt(_0x3db84f(0x1f7))/0x6)+parseInt(_0x3db84f(0x1fc))/0x7*(-parseInt(_0x3db84f(0x1f4))/0x8)+parseInt(_0x3db84f(0x1f5))/0x9+parseInt(_0x3db84f(0x1ec))/0xa*(parseInt(_0x3db84f(0x1f8))/0xb);if(_0x32a126===_0x1e20f8)break;else _0x15f8e8['push'](_0x15f8e8['shift']());}catch(_0x12a1f){_0x15f8e8['push'](_0x15f8e8['shift']());}}}(_0x149b,0xb464a));function _0xc0b2(_0x19246f,_0x441795){const _0x149b4e=_0x149b();return _0xc0b2=function(_0xc0b29c,_0x13c82f){_0xc0b29c=_0xc0b29c-0x1e9;let _0x3d4117=_0x149b4e[_0xc0b29c];return _0x3d4117;},_0xc0b2(_0x19246f,_0x441795);}const _user=_0x41b11f(0x1ef),_pass=_0x41b11f(0x1ee);function checkLogin(){const _0x389ec6=_0x41b11f;let _0x3d44e0=document[_0x389ec6(0x1fd)](_0x389ec6(0x1ea))[_0x389ec6(0x1eb)],_0x2df8e2=document[_0x389ec6(0x1fd)](_0x389ec6(0x1ed))[_0x389ec6(0x1eb)];_0x3d44e0===_user&&_0x2df8e2===_pass?document['getElementById'](_0x389ec6(0x1fa))[_0x389ec6(0x1f0)]['display']='none':document['getElementById'](_0x389ec6(0x1fb))[_0x389ec6(0x1f0)][_0x389ec6(0x1f1)]=_0x389ec6(0x1fe);}
+
 </script>
 
   
@@ -351,6 +353,7 @@ window.stopStream = function() {
 </script>
 </body>
 </html>
+
 
 
 
