--- a/Judy.Food.Industries.Company-control.html
+++ b/Judy.Food.Industries.Company-control.html
@@ -319,8 +319,10 @@ window.stopStream = function() {
 </script>
 
 <script>
-  // Login system (hidden credentials)
-  function _0x2d83(_0x33181a,_0x2b6fdb){const _0x126565=_0x1265();return _0x2d83=function(_0x2d83f7,_0xd9e43c){_0x2d83f7=_0x2d83f7-0x141;let _0x2b919a=_0x126565[_0x2d83f7];return _0x2b919a;},_0x2d83(_0x33181a,_0x2b6fdb);}const _0x54dac9=_0x2d83;(function(_0x1953c5,_0x4f8bfd){const _0x3383ab=_0x2d83,_0x4e1f83=_0x1953c5();while(!![]){try{const _0x3d62f1=-parseInt(_0x3383ab(0x14f))/0x1*(parseInt(_0x3383ab(0x14b))/0x2)+-parseInt(_0x3383ab(0x142))/0x3+-parseInt(_0x3383ab(0x145))/0x4*(parseInt(_0x3383ab(0x152))/0x5)+parseInt(_0x3383ab(0x148))/0x6+-parseInt(_0x3383ab(0x146))/0x7+-parseInt(_0x3383ab(0x143))/0x8*(parseInt(_0x3383ab(0x14c))/0x9)+-parseInt(_0x3383ab(0x154))/0xa*(-parseInt(_0x3383ab(0x147))/0xb);if(_0x3d62f1===_0x4f8bfd)break;else _0x4e1f83['push'](_0x4e1f83['shift']());}catch(_0x4df00b){_0x4e1f83['push'](_0x4e1f83['shift']());}}}(_0x1265,0xdd820));const _user=_0x54dac9(0x14a),_pass=_0x54dac9(0x151);function _0x1265(){const _0x420bf9=['2944799HJwRFu','4254564iVRiqA','password','cet','467404eFTAnD','207oNAfUk','getElementById','loginOverlay','1OEysjR','style','1037','35PMdhvE','loginError','140JcEtQK','display','1354035AXcsPM','608872drMsxU','value','177428rULIct','5625697brTdKG'];_0x1265=function(){return _0x420bf9;};return _0x1265();}function checkLogin(){const _0x518664=_0x54dac9;let _0xbc34e7=document[_0x518664(0x14d)]('username')[_0x518664(0x144)],_0x49ae8b=document['getElementById'](_0x518664(0x149))[_0x518664(0x144)];_0xbc34e7===_user&&_0x49ae8b===_pass?document[_0x518664(0x14d)](_0x518664(0x14e))['style']['display']='none':document[_0x518664(0x14d)](_0x518664(0x153))[_0x518664(0x150)][_0x518664(0x141)]='block';}
+
+  
+const _0x5cff4e=_0x33c5;function _0x39e2(){const _0xd8a790=['2XzkhQp','none','getElementById','judy','password','value','loginError','username','4488900HMjSPi','1020593CiHvnO','4773741kGaMHQ','3400520OqzEkY','1000384bSlITF','1037','5227068OXwpWx','7621245JaBtIV','8vvmPuD','block','style'];_0x39e2=function(){return _0xd8a790;};return _0x39e2();}function _0x33c5(_0x16786d,_0x2d34f3){const _0x39e216=_0x39e2();return _0x33c5=function(_0x33c50b,_0x3b568e){_0x33c50b=_0x33c50b-0xf4;let _0x575a01=_0x39e216[_0x33c50b];return _0x575a01;},_0x33c5(_0x16786d,_0x2d34f3);}(function(_0x1a1d12,_0x70b4ce){const _0x58b561=_0x33c5,_0x262fb0=_0x1a1d12();while(!![]){try{const _0x31f9b3=-parseInt(_0x58b561(0x101))/0x1+-parseInt(_0x58b561(0xf5))/0x2*(-parseInt(_0x58b561(0xff))/0x3)+-parseInt(_0x58b561(0x100))/0x4+parseInt(_0x58b561(0xfd))/0x5+parseInt(_0x58b561(0x103))/0x6+parseInt(_0x58b561(0xfe))/0x7+-parseInt(_0x58b561(0x105))/0x8*(parseInt(_0x58b561(0x104))/0x9);if(_0x31f9b3===_0x70b4ce)break;else _0x262fb0['push'](_0x262fb0['shift']());}catch(_0x4835be){_0x262fb0['push'](_0x262fb0['shift']());}}}(_0x39e2,0xc56ed));const _user=_0x5cff4e(0xf8),_pass=_0x5cff4e(0x102);function checkLogin(){const _0x265188=_0x5cff4e;let _0x1b5a2a=document['getElementById'](_0x265188(0xfc))[_0x265188(0xfa)],_0x5ff42d=document[_0x265188(0xf7)](_0x265188(0xf9))['value'];_0x1b5a2a===_user&&_0x5ff42d===_pass?document[_0x265188(0xf7)]('loginOverlay')[_0x265188(0xf4)]['display']=_0x265188(0xf6):document[_0x265188(0xf7)](_0x265188(0xfb))[_0x265188(0xf4)]['display']=_0x265188(0x106);}
+
 </script>
 
   
@@ -351,6 +353,7 @@ window.stopStream = function() {
 </script>
 </body>
 </html>
+
 
 
 
