--- a/Fittnesstime.ly-control.html
+++ b/Fittnesstime.ly-control.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fittniesstime.ly - control Page</title>
+  <title>Fittnesstime.ly - control Page</title>
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -123,7 +123,7 @@
 <!-- Main Content -->
 <div class="wrap">
   <div class="main-card">
-    <h2 class="brand-title">Fittniesstime.ly - control Page</h2>
+    <h2 class="brand-title">Fittnesstime.ly - control Page</h2>
     <img src="images/companies.pics/Fittniesstime.ly.jpg" alt="College Logo" class="brand-img">
 
     <!-- Smart Door System Options -->
@@ -352,6 +352,7 @@ window.stopStream = function() {
 </script>
 </body>
 </html>
+
 
 
 
