--- a/vvvv.html
+++ b/vvvv.html
@@ -11,10 +11,10 @@
 
   <style>
     :root {
-      --bg1:#003366;
-      --bg2:#001a33;
-      --card-dark:#2a2a2a;   /* رمادي داكن للكارد في دارك مود */
-      --card-light:#f2f2f2;  /* رمادي فاتح للكارد في لايت مود */
+      --bg1:#003366;   /* أزرق غامق */
+      --bg2:#001a33;   /* أزرق داكن */
+      --card-dark:#2a2a2a;  /* للكارد في دارك مود */
+      --card-light:#f9f9f9; /* للكارد في لايت مود */
       --text:#fff;
     }
 
@@ -22,6 +22,7 @@
       background: linear-gradient(120deg, var(--bg1), var(--bg2));
       color: var(--text);
       font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;
+      transition: background 0.5s ease, color 0.5s ease;
     }
 
     h1 {
@@ -31,12 +32,14 @@
     }
 
     .main-card {
-      background: var(--card-dark);
+      background: var(--card-light);
       border-radius: 18px;
       box-shadow: 0 10px 30px rgba(0,0,0,.35);
       padding: 30px;
       margin: 30px auto;
       max-width: 700px;
+      color: #222;
+      transition: background 0.5s ease, color 0.5s ease, box-shadow 0.5s ease;
     }
 
     .main-card img {
@@ -46,6 +49,11 @@
       display: block;
       border-radius: 12px;
       box-shadow: 0 5px 15px rgba(0,0,0,.4);
+      transition: transform 0.4s ease;
+    }
+
+    .main-card img:hover {
+      transform: scale(1.05);
     }
 
     .form-control {
@@ -53,6 +61,7 @@
       border: none;
       border-radius: 10px;
       margin-bottom: 15px;
+      transition: background 0.3s ease, border 0.3s ease;
     }
 
     .form-control:focus {
@@ -68,36 +77,54 @@
       font-weight: bold;
       border-radius: 10px;
       width: 100%;
+      transition: background 0.3s ease, transform 0.2s ease;
     }
 
     button[type="submit"]:hover {
       background: #44688c;
+      transform: scale(1.02);
     }
 
     footer {
-      background: #2a2a2a;
+      background: rgba(0,51,102,0.9);
       color:#fff;
       margin-top: 40px;
       padding: 20px 0;
+      transition: background 0.5s ease, color 0.5s ease;
     }
     footer a { color:#fff; }
 
     nav.navbar {
+      background: rgba(0,51,102,0.9) !important;
+      transition: background 0.5s ease;
+    }
+
+    /* Dark Mode */
+    .dark-mode {
+      background: #000 !important;
+      color: #fff !important;
+    }
+    .dark-mode .main-card {
+      background: var(--card-dark);
+      color: #fff;
+    }
+    .dark-mode nav.navbar,
+    .dark-mode footer {
       background: #2a2a2a !important;
     }
 
-    /* Light Mode */
-    .light-mode {
-      background: #f9f9f9 !important;
-      color: #222 !important;
+    /* زر تبديل المود */
+    .mode-btn {
+      background: transparent;
+      border: none;
+      font-size: 1.3rem;
+      color: #fff;
+      margin-left: 12px;
+      transition: transform 0.3s ease, color 0.3s ease;
     }
-    .light-mode .main-card {
-      background: var(--card-light);
-      color: #222;
-    }
-    .light-mode nav.navbar,
-    .light-mode footer {
-      background: #003366 !important;
+    .mode-btn:hover {
+      color: #ffdd57;
+      transform: rotate(20deg) scale(1.2);
     }
   </style>
 </head>
@@ -114,7 +141,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-lg-auto">
+      <ul class="navbar-nav ms-lg-auto align-items-lg-center">
         <li class="nav-item"><a class="nav-link text-white" href="#section_1">Home</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="#section_2">Our Story</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="#section_3">Components</a></li>
@@ -122,7 +149,7 @@
         <li class="nav-item"><a class="nav-link text-white" href="#section_5">Contact</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="download.html">App</a></li>
         <li class="nav-item">
-          <button id="themeToggle" class="btn btn-sm btn-light ms-3">🌙 Dark Mode</button>
+          <button id="themeToggle" class="mode-btn" title="Toggle Mode">🌙</button>
         </li>
       </ul>
     </div>
@@ -133,7 +160,7 @@
 <div class="container">
   <div class="main-card">
     <h1>Job Application Form</h1>
-    <!-- الصورة الجديدة -->
+    <!-- الصورة -->
     <img src="images/companies.pics/College of Electronic Technology - Tripoli.jpg" alt="College Logo">
 
     <form class="custom-form" action="https://formspree.io/f/xdklgoae" method="post" enctype="multipart/form-data">
@@ -175,16 +202,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-  // Theme Toggle
-  document.getElementById("themeToggle").addEventListener("click", () => {
-    document.body.classList.toggle("light-mode");
-    let btn = document.getElementById("themeToggle");
-    if (document.body.classList.contains("light-mode")) {
-      btn.innerText = "🌙 Dark Mode";
-      btn.classList.replace("btn-light","btn-dark");
+  const btn = document.getElementById("themeToggle");
+  btn.addEventListener("click", () => {
+    document.body.classList.toggle("dark-mode");
+    if (document.body.classList.contains("dark-mode")) {
+      btn.innerText = "☀️";
     } else {
-      btn.innerText = "☀️ Light Mode";
-      btn.classList.replace("btn-dark","btn-light");
+      btn.innerText = "🌙";
     }
   });
 </script>
