--- a/vvvv.html
+++ b/vvvv.html
@@ -135,6 +135,9 @@
     .dark-mode footer {
       background: #2a2a2a !important;
     }
+    .dark-mode h1 {
+  color: #fff !important;
+    }
 
     /* زر تبديل المود */
     .mode-btn {
@@ -364,5 +367,6 @@
 </script>
 </body>
 </html>
+
 
 
