--- a/dashboard.html
+++ b/dashboard.html
@@ -196,7 +196,7 @@
         <div class="music-select">
           <select id="songSelect">
             <!-- Update these values to match the actual raw.githubusercontent.com paths if your songs are in repo. -->
-            <option value="https://raw.githubusercontent.com/smartdoorsystem/smart-door-system/main/songs/song1.mp3">Song 1</option>
+            <option value="https://raw.githubusercontent.com/smartdoorsystem/smart-door-system/main/songs/song1.mp3">𝘝𝘪𝘭𝘪𝘢𝘮 𝘓𝘢𝘯𝘦 - 𝘱𝘢𝘳𝘵𝘪𝘤𝘭𝘦𝘴 𝘚𝘭𝘰𝘸𝘦𝘥</option>
             <option value="https://raw.githubusercontent.com/smartdoorsystem/smart-door-system/main/songs/song2.mp3">Song 2</option>
             <option value="https://raw.githubusercontent.com/smartdoorsystem/smart-door-system/main/songs/song3.mp3">Song 3</option>
           </select>
@@ -770,4 +770,5 @@ window.addEventListener('beforeunload', function(e){
 
 </script>
 </body>
+
 </html>
