--- a/dashboard.html
+++ b/dashboard.html
@@ -193,7 +193,7 @@
 <!-- PROFILE CARD بدل Weather -->
 <div class="card" style="text-align:center">
   <h2>Personal Info</h2>
-  <img src="profile.jpg" alt="Profile Picture" 
+  <img src="images/team/abdelraouf m.jpg" alt="Profile Picture" 
        style="width:100px;height:100px;border-radius:50%;object-fit:cover;margin-bottom:10px">
   <div><strong id="empName">Abdelraouf Shenkada</strong></div>
   <div class="muted" id="empJob">Software Engineer</div>
@@ -752,6 +752,7 @@ window.addEventListener('beforeunload', function(e){
 </body>
 
 </html>
+
 
 
 
