--- a/dashboard.html
+++ b/dashboard.html
@@ -207,9 +207,10 @@
         <div class="music-select">
           <select id="songSelect">
             <!-- Update these values to match the actual raw.githubusercontent.com paths if your songs are in repo. -->
-            <option value="https://raw.githubusercontent.com/smartdoorsystem/smart-door-system/main/songs/song1.mp3">Song 1</option>
-            <option value="https://raw.githubusercontent.com/smartdoorsystem/smart-door-system/main/songs/song2.mp3">Song 2</option>
-            <option value="https://raw.githubusercontent.com/smartdoorsystem/smart-door-system/main/songs/song3.mp3">Song 3</option>
+            <option value="songs/𝘝𝘪𝘭𝘪𝘢𝘮 𝘓𝘢𝘯𝘦 - 𝘱𝘢𝘳𝘵𝘪𝘤𝘭𝘦𝘴 𝘚𝘭𝘰𝘸𝘦𝘥   𝘙𝘦𝘷𝘦𝘳𝘣(MP3_128K).mp3">𝘝𝘪𝘭𝘪𝘢𝘮 𝘓𝘢𝘯𝘦 - 𝘱𝘢𝘳𝘵𝘪𝘤𝘭𝘦𝘴 𝘚𝘭𝘰𝘸𝘦𝘥   𝘙𝘦𝘷𝘦𝘳𝘣</option>
+            <option value="songs/Drake - Toosie Slide (Lyrics) _left foot up right foot slide_(MP3_128K).mp3">Drake - Toosie Slide</option>
+            <option value="songs/Michael Jackson-Beat it (Lyrics)(MP3_128K).mp3">Michael Jackson-Beat it</option>
+            <option value="songs/Me and the Devil(MP3_128K).mp3">Me and the Devil</option>
           </select>
           <button class="btn" id="playBtn">Play</button>
           <button class="btn alt" id="stopBtn">Stop</button>
@@ -752,6 +753,7 @@ window.addEventListener('beforeunload', function(e){
 </body>
 
 </html>
+
 
 
 
