--- a/dashboard.html
+++ b/dashboard.html
@@ -66,7 +66,7 @@
     max-width:1400px;
     margin:0 auto;
     display:grid;
-    grid-template-columns: 1.2fr 1fr;
+    grid-template-columns: 1fr; 
     gap:20px;
     align-items:start;
   }
@@ -81,7 +81,7 @@
   /* top-left row: wide widgets */
   .grid-wide{
     display:grid;
-    grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr; 
     gap:20px;
   }
 
@@ -753,6 +753,7 @@ window.addEventListener('beforeunload', function(e){
 </body>
 
 </html>
+
 
 
 
