--- a/dashboard.html
+++ b/dashboard.html
@@ -349,13 +349,13 @@
     <div class="card">
       <h2>Pomodoro Timer</h2>
       <div style="display:flex;gap:8px;align-items:center">
-        <div style="font-weight:800;font-size:28px" id="timerDisplay">25:00</div>
+        <div style="font-weight:800;font-size:28px" id="timerDisplay">30:00</div>
         <div style="display:flex;flex-direction:column;gap:6px">
           <button class="btn" id="startTimer">Start</button>
           <button class="btn alt" id="stopTimer">Stop</button>
         </div>
       </div>
-      <small class="muted">25 / 5 by default. You can change in code.</small>
+      <small class="muted">30 by default. You can change in code.</small>
     </div>
 
     <div class="card">
@@ -750,6 +750,7 @@ window.addEventListener('beforeunload', function(e){
 </body>
 
 </html>
+
 
 
 
