--- a/dashboard.html
+++ b/dashboard.html
@@ -171,10 +171,10 @@
 <body>
 <header>
   <div class="brand">
-    <div class="logo">SDS</div>
+    <div class="logo">judy</div>
     <div>
       <h1>Employee Dashboard</h1>
-      <div class="subtitle">Smart Door System — Personal workspace</div>
+      <div class="subtitle">judy — Personal workspace</div>
     </div>
   </div>
   <div class="controls">
@@ -752,6 +752,7 @@ window.addEventListener('beforeunload', function(e){
 </body>
 
 </html>
+
 
 
 
